--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>My First Heading</h1>
+
+    <p>My first paragraph.</p>
+
 </body>
 </html>
