--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>My First Heading</h1>
-
     <p>My first paragraph.</p>
+    <img src="./images/marmoset.jpg" alt="MONKE FR">
 
 </body>
-</html>
+</html> 
