--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MARMOSET MONKE</title>
 </head>
-<body>
-    <h1>My First Heading</h1>
-    <p>My first paragraph.</p>
-    <img src="./images/marmoset.jpg" alt="MONKE FR">
 
+<body>
+            <a href="./index.html">Home</a>
+
+            <a href="./test.html">Contact</a>
+    <hr>
+    <h1>Hi! I"m Andrey, <br>Front-end Developer </h1>
+    <p>idk just simple text here so dw bout it uwu</p>
+    <img src="./images/marmoset.jpg" alt="MONKE FR">
+    <a href="./test.html">Download Resume</a>
 </body>
 </html> 
