--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
     <hr>
     <h1>Hi! I"m Andrey, <br>Front-end Developer </h1>
     <p>idk just simple text here so dw bout it uwu</p>
-    <img src="./images/marmoset.jpg" alt="MONKE FR">
-    <a href="./test.html">Download Resume</a>
+    <img src="./images/marmoset.jpg" alt="PUX">
+    <br>
+    <a href="">Download resume</a>
+    <hr>
+    <table>
+        <tr>
+            <td><img src="./images/Group.png" alt="facebook"></td>
+            <td><img src="./images/instagram-fill.png" alt="instagram-fill"></td>
+            <td><img src="./images/linkedin-box-fill.png" alt="linkedin"></td>
+            <td><img src="./images/twitter-fill.png" alt="twitter"></td>
+        </tr>
+    </table>
 </body>
 </html> 
