addde form for contact.html

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,34 @@
     <title>Contact</title>
 </head>
 <body>
+    <a href="./index.html">Home</a>
+
+    <a href="./contact.html">Contact</a>
+<hr>
+<h1>Contact me</h1>
+<form>
+    <label for="name">Full name*</label>
+    <input placeholder="Your name.." type="text" name="1" id="name">
+    <input placeholder="Your last name.." type="text" name="1" id="name">
+    <br>
+    <label for="phone">Phone number* </label>
+    <input placeholder="Your phone.." type="number" name="1" id="phone">
+    <br>
+    <Label id="country">Country</Label>
+    <select name="country" id="country">
+        <option value="Ukraine">Ukraine</option>
+        <option value="Germany">Germany</option>
+        <option value="Africa">Africa</option>
+    </select>
+
+    <br><br>
+
+    <textarea placeholder="your message.." id=""></textarea>
+
+    <br> <br>
+
+    <input type="submit" name="submit" id="">
     
+</form>
 </body>
 </html>
