--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
             <a href="./index.html">Home</a>
 
-            <a href="./test.html">Contact</a>
+            <a href="./contact.html">Contact</a>
     <hr>
     <h1>Hi! I"m Andrey, <br>Front-end Developer </h1>
     <p>idk just simple text here so dw bout it uwu</p>
