added icons from index.html

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,16 @@
     <br> <br>
 
     <input type="submit" name="submit" id="">
-    
+
 </form>
+<hr>
+<table>
+    <tr>
+        <td><img src="./images/Group.png" alt="facebook"></td>
+        <td><img src="./images/instagram-fill.png" alt="instagram-fill"></td>
+        <td><img src="./images/linkedin-box-fill.png" alt="linkedin"></td>
+        <td><img src="./images/twitter-fill.png" alt="twitter"></td>
+    </tr>
+</table>
 </body>
 </html>
