--- a/contact.html
+++ b/contact.html
@@ -13,22 +13,22 @@
 <h1>Contact me</h1>
 <form>
     <label for="name">Full name*</label>
-    <input placeholder="Your name.." type="text" name="1" id="name">
-    <input placeholder="Your last name.." type="text" name="1" id="name">
+    <input placeholder="Your name.." type="text" name="name" id="name">
+    <input placeholder="Your last name.." type="text" name="last name" id="last name">
     <br>
     <label for="phone">Phone number* </label>
-    <input placeholder="Your phone.." type="number" name="1" id="phone">
+    <input placeholder="Your phone.." type="tel" name="phone" id="phone">
     <br>
-    <Label id="country">Country</Label>
+    <Label for="country">Country</Label>
     <select name="country" id="country">
         <option value="Ukraine">Ukraine</option>
         <option value="Germany">Germany</option>
-        <option value="Africa">Africa</option>
+        <option value="Africa">Moldova</option>
     </select>
 
     <br><br>
 
-    <textarea placeholder="your message.." id=""></textarea>
+    <textarea name="message" placeholder="your message.." id=""></textarea>
 
     <br> <br>
 
