--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <form>
     <label for="name">Full name*</label>
     <input placeholder="Your name.." type="text" name="name" id="name">
-    <input placeholder="Your last name.." type="text" name="last name" id="last name">
+    <input placeholder="Your last name.." type="text" name="last-name" id="last-name">
     <br>
     <label for="phone">Phone number* </label>
     <input placeholder="Your phone.." type="tel" name="phone" id="phone">
@@ -28,11 +28,11 @@
 
     <br><br>
 
-    <textarea name="message" placeholder="your message.." id=""></textarea>
+    <textarea name="message" placeholder="your message.." id="message"></textarea>
 
     <br> <br>
 
-    <input type="submit" name="submit" id="">
+    <input type="submit" name="submit" id="submit" value="Send">
 
 </form>
 <hr>
